--- a/docs/verify/simulate-with-qiskit-primitives.mdx
+++ b/docs/verify/simulate-with-qiskit-primitives.mdx
@@ -93,7 +93,13 @@ observable.
     with the [`qiskit.primitives.PrimitiveResult.primitiveresult`](../api/qiskit/qiskit.primitives.PrimitiveResult#primitiveresult) method.
 
 ```python
-job = estimator.run([(qc, observable, parameter_values)])
+# Circuits and parameters must obey the Instruction Set Architecture (ISA) of a particular backend.
+from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+
+pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
+isa_circuit = pm.run(qc)
+
+job = estimator.run([(isa_circuit, observable, parameter_values)])
 result = job.result()
 print(f" > Result class: {type(result)}")
 ```
@@ -108,7 +114,13 @@ print(f" > Result class: {type(result)}")
     with the [`JobV1.result`](../api/qiskit/qiskit.providers.JobV1#result) method.
 
 ```python
-job = estimator.run([qc]*3, [observable]*3, parameter_values)
+# Circuits and parameters must obey the Instruction Set Architecture (ISA) of a particular backend.
+from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+
+pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
+isa_circuit = pm.run(qc)
+
+job = estimator.run([isa_circuit]*3, [observable]*3, parameter_values)
 result = job.result()
 print(f" > Result class: {type(result)}")
 ```
@@ -174,8 +186,15 @@ instead of the number of `shots` used in the V1 interface.
       method level. This allows for a more finely-grained tuning of the option all the way to the PUB level.
 
     ```python
+    # Circuits and parameters must obey the Instruction Set Architecture (ISA) of a particular backend.
+    from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+
+    pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
+    isa_circuit1 = pm.run(circuit1)
+    isa_circuit2 = pm.run(circuit2)
+
     # Estimate expectation values for two PUBs, both with 0.05 precision.
-    estimator_v2.run([(circuit1, obs_array1), (circuit2, obs_array_2)], precision=0.05)
+    estimator.run([(isa_circuit1, obs_array1), (isa_circuit2, obs_array_2)], precision=0.05)
     ```
 
   </TabItem>
@@ -188,7 +207,13 @@ instead of the number of `shots` used in the V1 interface.
         - Modifying the [`qiskit.primitives.Estimator`](../api/qiskit/qiskit.primitives.Estimator) options.
 
     ```python
-    job = estimator.run(qc, observable, shots=2048, seed=123)
+    # Circuits and parameters must obey the Instruction Set Architecture (ISA) of a particular backend.
+    from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+
+    pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
+    isa_circuit = pm.run(qc)
+
+    job = estimator.run(isa_circuit, observable, shots=2048, seed=123)
     result = job.result()
     print(result)
     ```
