Add qiskit patterns image

--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -23,6 +23,8 @@
     "\n",
     "4.  Analyze the results\n",
     "\n",
+    "![Qiskit patterns](/images/start/hello-world/qiskit-patterns.png)\n",
+    "\n",
     "\n",
     "## Step 1. Map the problem to a quantum-native format"
    ]
