--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -381,7 +381,7 @@
     "\n",
     "# Scale to $n$-qubits\n",
     "\n",
-    "In order to accomplish utility-scale work, we will need to scale up this simple circuit to use many more qubits.  To begin thinking about how to accomplish this, we will create a 100-qubit Bell state and measure the observable . In the code blocks below, we'll follow the same steps in the Qiskit Patterns workflow and measure the expectation value $\\langle Z_0 Z_i $\\rangle for each qubit.\n",
+    "In order to accomplish utility-scale work, we will need to scale up this simple circuit to use many more qubits.  To begin thinking about how to accomplish this, we will create a 100-qubit Bell state and measure the observable . In the following code, we'll follow the same steps in the Qiskit Patterns workflow and measure the expectation value $\\langle Z_0 Z_i \\rangle $ for each qubit.\n",
     "\n",
     "## Step 1. Map the problem\n",
     "\n",
