--- a/docs/verify/simulate-with-qiskit-primitives.mdx
+++ b/docs/verify/simulate-with-qiskit-primitives.mdx
@@ -91,7 +91,7 @@ observable.
 <Tabs>
   <TabItem value="EstimatorV2" label="StatevectorEstimator (V2)">
     Run the estimation by calling the [`StatevectorEstimator.run`](../api/qiskit/qiskit.primitives.StatevectorEstimator#run)
-    method, which returns an instance of a [PrimitiveJob](/api/qiskit/qiskit.primitives.PrimitiveJob) object. You can get the results from the
+    method, which returns an instance of a [`PrimitiveJob`](/api/qiskit/qiskit.primitives.PrimitiveJob) object. You can get the results from the
     job (as a [`qiskit.primitives.PrimitiveResult`](../api/qiskit/qiskit.primitives.PrimitiveResult) object)
     with the [`qiskit.primitives.PrimitiveResult.primitiveresult`](../api/qiskit/qiskit.primitives.PrimitiveResult#primitiveresult) method.
 
