testing out print statement

--- a/docs/verify/simulate-with-qiskit-primitives.mdx
+++ b/docs/verify/simulate-with-qiskit-primitives.mdx
@@ -318,9 +318,7 @@ sampler = Sampler()
     job = sampler.run([(isa_circuit1, vals1), (isa_circuit2, vals1)])
     pub_result_1 = job.result()[0]
     pub_result_2 = job.result()[1]
-    ```
-    ```text
-    RESULT HERE XXX
+    print(f" > Result class: {type(pub_result)}")
     ```
   </TabItem>
 
