--- a/docs/verify/simulate-with-qiskit-primitives.mdx
+++ b/docs/verify/simulate-with-qiskit-primitives.mdx
@@ -213,7 +213,7 @@ instead of the number of `shots` used in the V1 interface.
   </TabItem>
 </Tabs>
 
-See more examples on the [Primitives examples](/run/primitives-examples#estimator-examples) page.
+For a full example, see the [Primitives examples](/run/primitives-examples#estimator-examples) page.
 
 ## Use the reference `Sampler`
 
