--- a/docs/verify/simulate-with-qiskit-primitives.mdx
+++ b/docs/verify/simulate-with-qiskit-primitives.mdx
@@ -487,7 +487,7 @@ The new interface accepts a `shots` argument that can be defined at the "PUB lev
   </TabItem>
 </Tabs>
 
-See more examples on the [Primitives examples](/run/primitives-examples#sampler-examples) page.
+For a full example, see the [Primitives examples](/run/primitives-examples#sampler-examples) page.
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
