--- a/docs/verify/simulate-with-qiskit-primitives.mdx
+++ b/docs/verify/simulate-with-qiskit-primitives.mdx
@@ -463,6 +463,8 @@ The new interface accepts a `shots` argument that can be defined at the "PUB lev
 <Tabs>
   <TabItem value="V2" label="StatevectorSampler (V2)">
 
+  This example assumes you have defined two circuits.
+  
     ```python
     # Sample two circuits at 128 shots each.
     sampler.run([isa_circuit1, isa_circuit2], shots=128)
