Update section on executing with a simulator

--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -243,6 +243,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "47479e76",
+   "metadata": {},
+   "source": [
+    "Once a job is submitted, you can wait until either the job is completed within your current python instance, or use the `job_id` in order to retrieve the data at a later time.  (See the [section on retrieving jobs](../run/monitor-job#retrieve-job-results-at-a-later-time) for more info)\n",
+    "\n",
+    "Once a job is completed, we can examine its output through the job's `result()` attribute shown below."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "792d2f01",
@@ -263,20 +273,11 @@
    "id": "48317a25",
    "metadata": {},
    "source": [
-    "<Admonition type=\"note\" title=\"Important\">\n",
+    "<Admonition type=\"note\" title=\"Alternative: run the example using a simulator\">\n",
     "\n",
     "Often times you will find that jobs will sit in the queue for some time.  If you'd like to quickly get results back for this small example circuit, use the code block provided below which utilizes the [`fake_provider`](../api/qiskit-ibm-runtime/fake_provider) submodule.\n",
     "\n",
-    "</Admonition>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "057f38f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "```python\n",
     "# Use the following code instead if you want to run on a simulator:\n",
     "\n",
     "\n",
@@ -304,7 +305,9 @@
     "\n",
     "# This is the result from our single pub, which had five observables,\n",
     "# so contains information on all five.\n",
-    "pub_result = job.result()[0]"
+    "pub_result = job.result()[0]\n",
+    "```\n",
+    "</Admonition>"
    ]
   },
   {
@@ -355,8 +358,6 @@
     "\n",
     "errors = pub_result.data.stds\n",
     "\n",
-    "#plt.errorbar(observables_labels, values, yerr=errors, fmt=\"o\")\n",
-    "\n",
     "# plotting graph\n",
     "plt.plot(observables_labels, values, '-o')\n",
     "plt.xlabel('Observables')\n",
@@ -379,11 +380,11 @@
    "source": [
     "---\n",
     "\n",
-    "# Scale to large numbers of qubits\n",
+    "## Scale to large numbers of qubits\n",
     "\n",
     "In order to accomplish utility-scale work, we will need to scale up this simple circuit to use many more qubits.  To begin thinking about how to accomplish this, we will create a 100-qubit Bell state and measure the observable . In the following code, we'll follow the same steps in the Qiskit Patterns workflow and measure the expectation value $\\langle Z_0 Z_i \\rangle $ for each qubit.\n",
     "\n",
-    "## Step 1. Map the problem\n",
+    "### Step 1. Map the problem\n",
     "\n",
     "First we will prepare a function that will return a `QuantumCircuit` which prepares an $n$-qubit Bell state.  We will then use this function to prepare a 100-qubit Bell state, and collect all the observables that we will plan to measure."
    ]
@@ -455,7 +456,7 @@
    "id": "a0b462ce",
    "metadata": {},
    "source": [
-    "## Step 2. Optimize the problem for execution on quantum hardware\n",
+    "### Step 2. Optimize the problem for execution on quantum hardware\n",
     "\n",
     "We will next transpile this circuit and map the observables to the layout of the hardware."
    ]
@@ -483,7 +484,7 @@
    "id": "2d2b5065",
    "metadata": {},
    "source": [
-    "## Step 3. Execute on hardware\n",
+    "### Step 3. Execute on hardware\n",
     "\n",
     "Once the circuit and observables are prepared, we then submit the job and enable error suppression via [dynamical decoupling](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.DynamicalDecouplingOptions)."
    ]
@@ -531,7 +532,7 @@
    "id": "0bc64091",
    "metadata": {},
    "source": [
-    "## Step 4. Post-process results\n",
+    "### Step 4. Post-process results\n",
     "\n",
     "Once the job has completed, we can plot the results and see that $\\langle Z_0 Z_i \\rangle$ decreases with increasing $i$, even though in an ideal simulation we should see that all $\\langle Z_0 Z_i \\rangle$ should be 1."
    ]
