Add more notes about needing the classical register name

--- a/docs/run/primitives-get-started.mdx
+++ b/docs/run/primitives-get-started.mdx
@@ -210,6 +210,8 @@ print(f">>> Job ID: {job.job_id()}")
 print(f">>> Job Status: {job.status()}")
 ```
 
+You need the classical register name to get the results.  By default, it is named `meas` when you use `measure_all()`. When defining your circuit, if you create one or more classical registers with a non-default name, use that name to get the results. You can find the classical register name by running `<circuit_name>.cregs`. For example, `qc.cregs`.
+
 ```python
 result = job.result()
 
