--- a/docs/run/execution-modes.mdx
+++ b/docs/run/execution-modes.mdx
@@ -5,11 +5,11 @@ description: An overview of the available execution modes in Qiskit Runtime; ses
 ---
 # Introduction to Qiskit Runtime execution modes
 
-There are several ways to run jobs, depending on your needs.
+There are several ways to run workloads, depending on your needs.
 
 **Job mode**: A single primitive request of the estimator or the sampler made without a context manager. Circuits and inputs are packaged as primitive unified blocs (PUBs) and submitted as an execution task on the quantum computer.
 
-[**Sessions mode**](sessions): A dedicated window for running multi-job workload. This allows users to experiment with variational algorithms in a more predictable way and even run multiple experiments simultaneously taking advantage of parallelism in the stack. Use sessions for iterative workloads. See [Run jobs in a session](run-jobs-in-session) for examples. 
+[**Sessions mode**](sessions): A dedicated window for running a multi-job workload. This allows users to experiment with variational algorithms in a more predictable way and even run multiple experiments simultaneously taking advantage of parallelism in the stack. Use sessions for iterative workloads. See [Run jobs in a session](run-jobs-in-session) for examples. 
 
 [**Batch mode**](run-jobs-batch): A multi-job manager for efficiently running an experiment that is comprised of bundle of independent jobs. Use batch mode to submit multiple primitive jobs simultaneously.
 
