--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -7,9 +7,12 @@
    "source": [
     "# Hello world\n",
     "\n",
-    "This Hello world example creates a simple quantum program and runs it on a quantum system. Begin with following the [Install and set up](install) instructions if you haven't already, including the steps to [Set up to use IBM Quantum&trade; Platform](setup-channel#set-up-to-use-ibm-quantum-platform).\n",
+    "This Hello world example comes in two parts: creating a simple quantum program and running it on a quantum system followed by a demonstration of how to scale it up to a utility level program (found in the section titled [Scale to large numbers of qubits](#scale-to-large-numbers-of-qubits)).\n",
     "\n",
-    "We recommend that you use the [Jupyter](https://jupyter.org/install) development environment to interact with quantum computers. Be sure to install the recommended extra visualization support (`pip install qiskit[visualization]`), and note that zsh users need to put `'qiskit[visualization]'` in single quotes.\n",
+    " First, begin by following the [Install and set up](install) instructions if you haven't already, including the steps to [Set up to use IBM Quantum&trade; Platform](setup-channel#set-up-to-use-ibm-quantum-platform).\n",
+    "\n",
+    "We recommend that you use the [Jupyter](https://jupyter.org/install) development environment to interact with quantum computers. Be sure to install the recommended extra visualization support (`pip install qiskit[visualization]`), and note that zsh users need to put `'qiskit[visualization]'` in single quotes. You'll also need the `matplotlib` package for the second part of this example.\n",
+    "\n",
     "\n",
     "To learn about quantum computing in general, check out the [Basics of quantum information course](https://learning.quantum.ibm.com/course/basics-of-quantum-information) in IBM Quantum Learning.\n",
     "\n",
@@ -23,10 +26,8 @@
     "\n",
     "4.  Analyze the results\n",
     "\n",
-    "![Qiskit patterns](/images/start/hello-world/qiskit-patterns.png)\n",
     "\n",
-    "\n",
-    "## Step 1. Map the problem to a quantum-native format"
+    "\n"
    ]
   },
   {
@@ -36,6 +37,8 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
+    "## Step 1. Map the problem to a quantum-native format\n",
+    "\n",
     "In a quantum program, *quantum circuits* are the native format in which to represent quantum instructions, and *operators* represent the observables to be measured. When creating a circuit, you'll usually create a new [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit) object, then add instructions to it in sequence."
    ]
   },
@@ -99,7 +102,9 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    "See [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit) in the documentation for all available operations."
+    "See [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit) in the documentation for all available operations.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -107,9 +112,9 @@
    "id": "f3ef4248-7938-44c1-85f1-edc997f0edcd",
    "metadata": {},
    "source": [
-    "The following code cell uses the `quantum_info` package to create six two-qubit Pauli operators. The ZZ operator is a shorthand for the tensor product $Z\\otimes Z$ which essentially means measuring Z on qubit 0 and Z on qubit 1 together and obtaining information about the correlation between qubit 0 and qubit 1. Expectation values like this are also typically written as $\\langle Z_0 Z_1 \\rangle$.\n",
+    "While creating quantum circuits, we also must consider what type of data we want to get back after execution, and there are are two ways to do so within Qiskit. You can either obtain a probability distribution for a set of qubits you choose to measure, or obtain the expectation value of an observable. Preparing your workload to measure your circuit in one of these two ways is done through the [Qiskit primitives](../run/primitives-get-started) (explained in detail in [Step 3](#step-3-execute-using-the-quantum-primitives) of this page).\n",
     "\n",
-    "If the state is entangled, then the measurement of $\\langle Z_0 Z_1 \\rangle$ should be equal to 1."
+    "For this example, we will be measuring some expectation values using the `qiskit.quantum_info` submodule which will be specified using operators (these are mathematical objects used to represent an action or process which changes a quantum state). The following code cell creates six two-qubit Pauli operators: `IZ`, `IX`, `ZI`, `XI`, `ZZ`, and `XX`. \n"
    ]
   },
   {
@@ -138,18 +143,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "674b4019",
+   "id": "47150779",
    "metadata": {},
    "source": [
-    "<Admonition type=\"note\" title=\"Important\">\n",
-    "  To ensure faster and more efficient results, as of 1 March 2024, circuits and observables need to be transformed to only use instructions supported by the system (referred to as *instruction set architecture (ISA)* circuits and observables) before being submitted to the Qiskit Runtime primitives.  See the [transpilation documentation](../transpile) for instructions to transform circuits.  Due to this change, the primitives will no longer perform layout or routing operations.  Consequently, transpilation options referring to those tasks will no longer have any effect. By default, all primitives except Sampler V2 still optimize the input circuits. To bypass all optimization, set `optimization_level=0`.\n",
     "\n",
-    "*Exception*: When you initialize the Qiskit Runtime Service with the Q-CTRL channel strategy (example below), abstract circuits are still supported.\n",
+    "<Admonition type=\"note\" title=\"Operator Notation\">\n",
     "\n",
-    "> ``` python\n",
-    "> service = QiskitRuntimeService(channel=\"ibm_cloud\", channel_strategy=\"q-ctrl\")\n",
-    "> ```\n",
-    ">\n",
+    "Here, something like the `ZZ` operator is a shorthand for the tensor product $Z\\otimes Z$ which essentially means measuring Z on qubit 0 and Z on qubit 1 together and obtaining information about the correlation between qubit 0 and qubit 1. Expectation values like this are also typically written as $\\langle Z_0 Z_1 \\rangle$.\n",
+    "\n",
+    "If the state is entangled, then the measurement of $\\langle Z_0 Z_1 \\rangle$ should be equal to 1.\n",
+    "\n",
     "</Admonition>"
    ]
   },
@@ -160,7 +163,9 @@
    "source": [
     "## Step 2. Optimize the circuits and operators\n",
     "\n",
-    "Even though the circuit and operators for this example are quite simple, we still need to convert its instructions into those of a backend device's [Instruction Set Architecture (ISA)](../transpile/#instruction-set-architecture).  This ensures the circuit complies with the constraints of a device (namely its native basis gates and qubit connectivity)."
+    "When executing circuits on a device, it is an important step to optimize the set of instructions which the circuit contains and work to minimize the overall depth (roughly the number of instructions) of the circuit. This ensures that you obtain the best results possible by reducing the effects of error and noise. Additionally, the circuit's instructions must conform to a backend device's [Instruction Set Architecture (ISA)](../transpile/#instruction-set-architecture) and takes both the device's basis gates as well as its qubit connectivity into account. \n",
+    "\n",
+    "The code snippet below will instantiate a real device to submit a job to and transform the circuit to match that backend's ISA."
    ]
   },
   {
@@ -204,7 +209,7 @@
    "source": [
     "## Step 3. Execute using the quantum primitives\n",
     "\n",
-    "Quantum computers can produce random results, so you'll often want to collect a sample of the outputs by running the circuit many times. You can estimate the value of the observable using the `Estimator` class. `Estimator` is one of our two [primitives](../run/primitives-get-started); the other is `Sampler`, which can be used to get data from a quantum computer.  These objects possess a `run()` method that executes the selection of circuits, observables, and parameters (if applicable), using what's known as a [primitive unified bloc (PUB)](../run/primitives#sampler-v2)."
+    "Quantum computers can produce random results, so you'll often want to collect a sample of the outputs by running the circuit many times. You can estimate the value of the observable using the `Estimator` class. `Estimator` is one of two [primitives](../run/primitives-get-started); the other is `Sampler`, which can be used to get data from a quantum computer.  These objects possess a `run()` method that executes the selection of circuits, observables, and parameters (if applicable), using what's known as a [primitive unified bloc (PUB)](../run/primitives#sampler-v2)."
    ]
   },
   {
@@ -275,7 +280,7 @@
    "source": [
     "<Admonition type=\"note\" title=\"Alternative: run the example using a simulator\">\n",
     "\n",
-    "Often times you will find that jobs will sit in the queue for some time.  If you'd like to quickly get results back for this small example circuit, use the code block provided below which utilizes the [`fake_provider`](../api/qiskit-ibm-runtime/fake_provider) submodule.\n",
+    "When running your quantum program on a real device your workload must wait in a queue before it is run. If you would like to save some time with this example, you can instead use the following code to run this small workload on a local simulator (using the [`fake_provider`](../api/qiskit-ibm-runtime/fake_provider)). Bear in mind this will only work for this small circuit, but when you scale up in the next section you will need to use a real device.\n",
     "\n",
     "```python\n",
     "# Use the following code instead if you want to run on a simulator:\n",
@@ -312,22 +317,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d5ea9a0",
-   "metadata": {},
-   "source": [
-    "## Step 4. Analyze the results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "d200d1f8",
    "metadata": {},
    "source": [
-    "<admonition type=\"note\">\n",
-    "  You might need to run `pip install matplotlib` if you do not already have it installed.\n",
-    "</admonition>\n",
+    "## Step 4. Analyze the results\n",
     "\n",
-    "The `values` property is a list of expectation values for each of the observables we provided."
+    "The analyze step is typically where you might postprocess your results using something like measurement error mitigation or zero noise extrapolation. You might feed these results into another workflow for further analysis or prepare a plot of the key values and data. In general this will be specific to your problem and so for this example,we'll simply plot each of the expectation values that were measured for our circuit. \n",
+    "\n",
+    "The expectation values and standard deviations for the observables you specified are accessed through the `PubResult.data.evs` and `PubResult.data.stds` attributes of the job results. To obtain the results from the sampler, use the `PubResult.data.meas.get_counts()` function which will return a `dict` of measurements in the form of bitstrings as keys and counts as their corresponding values."
    ]
   },
   {
@@ -370,7 +367,7 @@
    "id": "e6a9ba84",
    "metadata": {},
    "source": [
-    "Here we see that for qubits 0 and 1, the independent values of both X and Z are 0, while the correlations are 1. This is a hallmark of quantum entanglement."
+    "Here we see that for qubits 0 and 1, the independent expectation values of both X and Z are 0, while the correlations (`XX` and `ZZ`) are 1. This is a hallmark of quantum entanglement."
    ]
   },
   {
@@ -378,7 +375,7 @@
    "id": "0bc582d8",
    "metadata": {},
    "source": [
-    "---\n",
+    "\n",
     "\n",
     "## Scale to large numbers of qubits\n",
     "\n",
