--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -24,10 +24,7 @@
     "\n",
     "3.  Execute using a quantum primitive function\n",
     "\n",
-    "4.  Analyze the results\n",
-    "\n",
-    "\n",
-    "\n"
+    "4.  Analyze the results"
    ]
   },
   {
@@ -114,7 +111,7 @@
    "source": [
     "While creating quantum circuits, we also must consider what type of data we want to get back after execution, and there are are two ways to do so within Qiskit. You can either obtain a probability distribution for a set of qubits you choose to measure, or obtain the expectation value of an observable. Preparing your workload to measure your circuit in one of these two ways is done through the [Qiskit primitives](../run/primitives-get-started) (explained in detail in [Step 3](#step-3-execute-using-the-quantum-primitives) of this page).\n",
     "\n",
-    "For this example, we will be measuring some expectation values using the `qiskit.quantum_info` submodule which will be specified using operators (these are mathematical objects used to represent an action or process which changes a quantum state). The following code cell creates six two-qubit Pauli operators: `IZ`, `IX`, `ZI`, `XI`, `ZZ`, and `XX`. \n"
+    "For this example, we will be measuring some expectation values using the `qiskit.quantum_info` submodule which will be specified using operators (these are mathematical objects used to represent an action or process which changes a quantum state). The following code cell creates six two-qubit Pauli operators: `IZ`, `IX`, `ZI`, `XI`, `ZZ`, and `XX`."
    ]
   },
   {
@@ -146,7 +143,6 @@
    "id": "47150779",
    "metadata": {},
    "source": [
-    "\n",
     "<Admonition type=\"note\" title=\"Operator Notation\">\n",
     "\n",
     "Here, something like the `ZZ` operator is a shorthand for the tensor product $Z\\otimes Z$ which essentially means measuring Z on qubit 0 and Z on qubit 1 together and obtaining information about the correlation between qubit 0 and qubit 1. Expectation values like this are also typically written as $\\langle Z_0 Z_1 \\rangle$.\n",
@@ -163,7 +159,7 @@
    "source": [
     "## Step 2. Optimize the circuits and operators\n",
     "\n",
-    "When executing circuits on a device, it is an important step to optimize the set of instructions which the circuit contains and work to minimize the overall depth (roughly the number of instructions) of the circuit. This ensures that you obtain the best results possible by reducing the effects of error and noise. Additionally, the circuit's instructions must conform to a backend device's [Instruction Set Architecture (ISA)](../transpile/#instruction-set-architecture) and takes both the device's basis gates as well as its qubit connectivity into account. \n",
+    "When executing circuits on a device, it is an important step to optimize the set of instructions which the circuit contains and work to minimize the overall depth (roughly the number of instructions) of the circuit. This ensures that you obtain the best results possible by reducing the effects of error and noise. Additionally, the circuit's instructions must conform to a backend device's [Instruction Set Architecture (ISA)](../transpile/#instruction-set-architecture) and takes both the device's basis gates as well as its qubit connectivity into account.\n",
     "\n",
     "The code snippet below will instantiate a real device to submit a job to and transform the circuit to match that backend's ISA."
    ]
@@ -322,7 +318,7 @@
    "source": [
     "## Step 4. Analyze the results\n",
     "\n",
-    "The analyze step is typically where you might postprocess your results using something like measurement error mitigation or zero noise extrapolation. You might feed these results into another workflow for further analysis or prepare a plot of the key values and data. In general this will be specific to your problem and so for this example,we'll simply plot each of the expectation values that were measured for our circuit. \n",
+    "The analyze step is typically where you might postprocess your results using something like measurement error mitigation or zero noise extrapolation. You might feed these results into another workflow for further analysis or prepare a plot of the key values and data. In general this will be specific to your problem and so for this example,we'll simply plot each of the expectation values that were measured for our circuit.\n",
     "\n",
     "The expectation values and standard deviations for the observables you specified are accessed through the `PubResult.data.evs` and `PubResult.data.stds` attributes of the job results. To obtain the results from the sampler, use the `PubResult.data.meas.get_counts()` function which will return a `dict` of measurements in the form of bitstrings as keys and counts as their corresponding values."
    ]
@@ -375,8 +371,6 @@
    "id": "0bc582d8",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
     "## Scale to large numbers of qubits\n",
     "\n",
     "In order to accomplish utility-scale work, we will need to scale up this simple circuit to use many more qubits.  To begin thinking about how to accomplish this, we will create a 100-qubit Bell state and measure the observable . In the following code, we'll follow the same steps in the Qiskit Patterns workflow and measure the expectation value $\\langle Z_0 Z_i \\rangle $ for each qubit.\n",
