--- a/docs/run/execution-modes.mdx
+++ b/docs/run/execution-modes.mdx
@@ -9,31 +9,29 @@ There are several ways to run workloads, depending on your needs.
 
 **Job mode**: A single primitive request of the estimator or the sampler made without a context manager. Circuits and inputs are packaged as primitive unified blocs (PUBs) and submitted as an execution task on the quantum computer.
 
-[**Sessions mode**](sessions): A dedicated window for running a multi-job workload. This allows users to experiment with variational algorithms in a more predictable way and even run multiple experiments simultaneously taking advantage of parallelism in the stack. Use sessions for iterative workloads. See [Run jobs in a session](run-jobs-in-session) for examples. 
+[**Sessions mode**](sessions): A dedicated window for running a multi-job workload. This allows users to experiment with variational algorithms in a more predictable way and even run multiple experiments simultaneously taking advantage of parallelism in the stack. Use sessions for iterative workloads. See [Run jobs in a session](run-jobs-in-session) for examples.
 
 [**Batch mode**](run-jobs-batch): A multi-job manager for efficiently running an experiment that is comprised of bundle of independent jobs. Use batch mode to submit multiple primitive jobs simultaneously.
 
 ## Best practices
 
-To ensure the most efficient use of the execution modes, the following practices are recommended:  
+To ensure the most efficient use of the execution modes, the following practices are recommended:
 
 - Always close your session, either by using a context manager or by specifying `session.close()`.
-- There is a fixed overhead associated with running a job. In general, if your each of your job uses less than one minute of QPU time, consider combining several into one larger job (this applies to all execution modes). "QPU time" refers to time spent by the QPU complex to process your job. 
-    
+- There is a fixed overhead associated with running a job. In general, if your each of your job uses less than one minute of QPU time, consider combining several into one larger job (this applies to all execution modes). "QPU time" refers to time spent by the QPU complex to process your job.
+
     A job's QPU time is listed in the **Usage** column on the IQP [Jobs](https://quantum.ibm.com/jobs) page, or you can  query it by using  `qiskit-ibm-runtime` with this command `job.metrics()["usage"]["quantum_seconds"]`
 
-- If each of your jobs consume more than one minute of QPU time, or if combining jobs is not practical, you can still run multiple jobs in parallel. Every job goes through both classical and quantum processing. While a QPU can process only one job at a time, up to five classical jobs can be processed in parallel. You can take advantage of this by submitting multiple jobs in [batch](run-jobs-batch#partition) or [session](run-jobs-in-session#two-vqe) execution mode. 
+- If each of your jobs consume more than one minute of QPU time, or if combining jobs is not practical, you can still run multiple jobs in parallel. Every job goes through both classical and quantum processing. While a QPU can process only one job at a time, up to five classical jobs can be processed in parallel. You can take advantage of this by submitting multiple jobs in [batch](run-jobs-batch#partition) or [session](run-jobs-in-session#two-vqe) execution mode.
 
 The above are general guidelines, and you should tune your workload to find the optimal ratio, especially when using sessions. For example, running smaller jobs in parallel might be more cost effective because of reduced wall clock time.
 
-## Sessions versus batch 
+## Sessions versus batch QPU usage
 
-The following image illustrates when the system is locked for your use in session and batch modes. When running a session, the system is locked for your use from the time the session starts until it ends, which includes classical computation time at the beginning and end of each job, and time between jobs.  For batch mode, the system is locked for your use from the time the first job starts being processed on the system until the last job is done being run on the system.
+QPU usage is a measurement of the amount of time the system is locked for your workload.
+
+* Session QPU usage is the entire active session time.
+* Batch QPU usage is the amount of time all jobs spend on the system.
+* Single job QPU usage is the quantum time they use in processing.
 
 [This image shows multiple sets of jobs.  One set is being run in sessions mode and the other is being run in batch mode.  For sessions mode, between each job is the interactive TTL (time to live).  The active window starts when the first job starts and ends after the last job is completed. After the final job of the first set of jobs completes, the active window ends and the session is paused (but not closed).  Another set of jobs then starts and jobs continue in a similar manner. The system is reserved for your use during the entire session.  For batch mode, the classical computation part of each job happens simultaneously, then all jobs are sent to the system.  The system is locked for your use from the time the first job reaches the system until the last job is done processing on the system.  There is no gap between jobs where the system is idle.](/images/run/execution-modes/SessionVsBatch.svg 'Sessions compared to batch')
-
-## Billing
-
-* Single jobs are billed for the quantum time they use in processing. 
-* Sessions are billed for the entire active session time. 
-* For batched jobs, you are billed for the time the QPU complex is processing your job. 
