--- a/docs/api/qiskit-ibm-provider/release-notes.mdx
+++ b/docs/api/qiskit-ibm-provider/release-notes.mdx
@@ -6,7 +6,7 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes" />
 
-# Qiskit IBM Provider (deprecated) 0.11 release notes
+# Qiskit IBM Provider (deprecated) release notes
 
 <span id="release-notes-0-11-0" />
 
