Indicate IBM Provider is deprecated in left navbar (#1197)
We're also changing other parts of the UI like the API dropdown in the
top nav bar. This will change the left ToC here:

<img width="326" alt="Screenshot 2024-04-18 at 10 49 23 AM"
src="https://github.com/Qiskit/documentation/assets/14852634/4e357344-b1e2-44c6-93e9-179f5e99723b">

This PR also removes the version number from the H1 for the release
notes for Runtime and Provider to no longer have the version number in
them. That didn't make sense to do because they're the same release
notes for all versions.

--- a/docs/api/qiskit-ibm-provider/release-notes.mdx
+++ b/docs/api/qiskit-ibm-provider/release-notes.mdx
@@ -1,12 +1,12 @@
 ---
-title: Qiskit IBM Provider release notes
-description: Changes made to Qiskit IBM Provider
+title: Qiskit IBM Provider (deprecated) release notes
+description: Changes made to Qiskit IBM Provider (deprecated)
 in_page_toc_max_heading_level: 2
 ---
 
 <span id="release-notes" />
 
-# Qiskit IBM Provider 0.11 release notes
+# Qiskit IBM Provider (deprecated) release notes
 
 <span id="release-notes-0-11-0" />
 
