--- a/tutorials/repeat-until-success/notebook.ipynb
+++ b/tutorials/repeat-until-success/notebook.ipynb
@@ -289,7 +289,7 @@
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
     "isa_circuit = pm.run(circuit)\n",
     "\n",
-    "built.draw(output=\"mpl\", style='iqp', idle_wires=False, cregbundle=False)"
+    "isa_circuit.draw(output=\"mpl\", style='iqp', idle_wires=False, cregbundle=False)"
    ]
   },
   {
@@ -367,7 +367,7 @@
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
     "isa_circuit = pm.run(circuit)\n",
     "\n",
-    "built.draw(output=\"mpl\", style='iqp', idle_wires=False, cregbundle=False)"
+    "isa_circuit.draw(output=\"mpl\", style='iqp', idle_wires=False, cregbundle=False)"
    ]
   },
   {
