Re-run notebook

--- a/docs/run/save-jobs.ipynb
+++ b/docs/run/save-jobs.ipynb
@@ -64,9 +64,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "43d0f06e-f97f-4c19-b242-02cb0bd420a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cogiau7imm49f6et38a0\n"
+     ]
+    }
+   ],
    "source": [
     "# Get ID of last job for demonstration\n",
     "job_id = service.jobs()[0].job_id()\n",
@@ -75,20 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "90133394-3259-487f-96b2-3b50e0274064",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<RuntimeJob('cogiau7imm49f6et38a0', 'sampler')>,\n",
-       " <RuntimeJob('crgja91qzd5000886v60', 'sampler')>,\n",
-       " <RuntimeJob('cogi9gftcirtooeunfe0', 'sampler')>,\n",
-       " <RuntimeJob('cogi8qqai5rk2r0u9bu0', 'sampler')>]"
+       "PrimitiveResult([PubResult(data=DataBin(meas=BitArray(<shape=(), num_shots=10, num_bits=2>)), metadata={'circuit_metadata': {}})], metadata={'version': 2})"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3a3ff817-01c1-47e8-94c6-1ecf2215ef7c",
    "metadata": {},
    "outputs": [],
@@ -131,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "316aa6f7-faee-4a05-a7b4-02d7bee4d58a",
    "metadata": {},
    "outputs": [
@@ -150,7 +156,7 @@
        "       [3]], dtype=uint8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "eae94b73-157b-4751-8dd3-add4cc9efec6",
    "metadata": {
     "tags": [
