Add note for case in which user has never submitted any jobs

--- a/docs/run/save-jobs.ipynb
+++ b/docs/run/save-jobs.ipynb
@@ -77,7 +77,8 @@
     }
    ],
    "source": [
-    "# Get ID of last job for demonstration\n",
+    "# Get ID of last job for demonstration.\n",
+    "# This will not work if you've never submitted a job.\n",
     "job_id = service.jobs()[0].job_id()\n",
     "print(job_id)"
    ]
