--- a/docs/run/configure-runtime-compilation.mdx
+++ b/docs/run/configure-runtime-compilation.mdx
@@ -8,7 +8,7 @@ description: How to configure runtime compilation in Qiskit Runtime.
 
 Runtime compilation techniques optimize and transform your circuit to minimize errors. Runtime compilation adds some classical pre-processing overhead to your overall runtime. Therefore, it is important to achieve a balance between perfecting your results and ensuring that your job completes in a reasonable amount of time.
 
-Primitives let you employ runtime compilation by by choosing advanced runtime compilation options and, for Estimator V2, by setting the optimization level (`optimization_level`) option.
+Primitives let you employ runtime compilation by choosing advanced runtime compilation options and, for Estimator V2, by setting the optimization level (`optimization_level`) option.
 
 <admonition type="note">Estimator V2 supports optimization levels 0 and 1 only. Sampler V2 does not support setting the optimization level.</admonition>
 
