--- a/docs/run/system-information.mdx
+++ b/docs/run/system-information.mdx
@@ -57,7 +57,7 @@ These values are shown on both the Systems and Simulators tabs of the [Compute r
 *   **Features** - Additional information about the system, such as whether it supports pulse inputs.
 
 <Admonition type="note" title="Average gate fidelity">
-Note that the metric for median ECR error (for Eagle processors) and median CZ error (for Heron processors) is the average gate fidelity, which is the average over all possible input states of the fidelity between the state produced by the actual operation and the state produced by the ideal operation.
+Note that the metric for median ECR error (for Eagle processors) and median CZ error (for Heron processors) is the [average gate fidelity](/api/qiskit/quantum_info#average_gate_fidelity), which is the average over all possible input states of the fidelity between the state produced by the actual operation and the state produced by the ideal operation.
 </Admonition>
 
 **Additional information available on the details page for each system**
