No sessions for Open plan.

--- a/docs/run/run-jobs-in-session.mdx
+++ b/docs/run/run-jobs-in-session.mdx
@@ -8,6 +8,10 @@ description: How to run a quantum computing job in a Qiskit Runtime session.
 
 There are several ways to set up and use [sessions](sessions).  It is recommended that you do not run a session with a single job in it.
 
+<Admonition type="note">
+Session execution mode is not supported in the Open plan. Jobs will run in job mode instead.
+</Admonition>
+
 <Admonition type="caution" title="Important">
 The way sessions are started within Qiskit Runtime has changed. **By 1 April 2024**, upgrade to `qiskit-ibm-runtime` version 0.20.0 or later, or `qiskit-ibm-provider` version 0.10.0 or later. In addition, ensure you are using Qiskit version 0.45.0 or later. Starting 1 April, session calls made in earlier versions of these packages will fail.
 </Admonition>
