--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "Follow the [Install and set up](install) instructions if you haven't already, including the steps to [Set up to use IBM Quantum&trade; Platform](setup-channel#set-up-to-use-ibm-quantum-platform).\n",
     "\n",
-    "We recommend that you use the [Jupyter](https://jupyter.org/install) development environment to interact with quantum computers. Be sure to install the recommended extra visualization support (`pip install qiskit[visualization]`), and note that zsh users need to put `'qiskit[visualization]'` in single quotes. You'll also need the `matplotlib` package for the second part of this example.\n",
+    "It is recommended that you use the [Jupyter](https://jupyter.org/install) development environment to interact with quantum computers. Be sure to install the recommended extra visualization support (`pip install qiskit[visualization]`), and note that zsh users need to put `'qiskit[visualization]'` in single quotes. You'll also need the `matplotlib` package for the second part of this example.\n",
     "\n",
     "\n",
     "To learn about quantum computing in general, check out the [Basics of quantum information course](https://learning.quantum.ibm.com/course/basics-of-quantum-information) in IBM Quantum Learning.\n",
@@ -74,7 +74,7 @@
     "The following code cell creates a circuit that produces a *Bell state,* which is a state wherein two (or more) qubits are fully entangled with each other.\n",
     "\n",
     "<Admonition type=\"note\" title=\"Note: bit ordering\">\n",
-    "  The Qiskit SDK uses the LSb 0 bit numbering where the $n^{th}$ digit has value $1 \\ll n$ or $2^n$. Because we usually write numbers on paper with the most significant digits to the left and the least significant digits to the right (in the Hindu-Arabic system used in most of the world), this has the consequence that the bits are labeled with indices increasing <b>from right to left</b>. This LSb 0 convention makes mathematics easier and is the most commonly used for modern digital electronics, although the opposite convention MSb 0 is also found in some domains. Converting the $i^{th}$ index between LSb 0 and MSb 0 conventions on an $n$-bit register is as simple as $i \\rightarrow n-i-1$. This differs across authors and software packages, so be aware! For more details, see the [Bit-ordering in the Qiskit SDK](../build/bit-ordering) topic.\n",
+    "  The Qiskit SDK uses the LSb 0 bit numbering where the $n^{th}$ digit has value $1 \\ll n$ or $2^n$. Because you usually write numbers with the most significant digits to the left and the least significant digits to the right (in the Hindu-Arabic system used in most of the world), this has the consequence that the bits are labeled with indices increasing <b>from right to left</b>. This LSb 0 convention makes mathematics easier and is the most commonly used for modern digital electronics, although the opposite convention MSb 0 is also found in some domains. Converting the $i^{th}$ index between LSb 0 and MSb 0 conventions on an $n$-bit register is as simple as $i \\rightarrow n-i-1$. This differs across authors and software packages, so be aware! For more details, see the [Bit-ordering in the Qiskit SDK](../build/bit-ordering) topic.\n",
     "</Admonition>"
    ]
   },
@@ -102,7 +102,7 @@
     "from qiskit import QuantumCircuit\n",
     "from qiskit.quantum_info import SparsePauliOp\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
-    "from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator\n",
+    "from qiskit_ibm_runtime import EstimatorV2 as Estimator\n",
     "\n",
     "# Create a new circuit with two qubits\n",
     "qc = QuantumCircuit(2)\n",
@@ -136,9 +136,9 @@
    "id": "f3ef4248-7938-44c1-85f1-edc997f0edcd",
    "metadata": {},
    "source": [
-    "While creating quantum circuits, we also must consider what type of data we want to get back after execution, and there are are two ways to do so within Qiskit. You can either obtain a probability distribution for a set of qubits you choose to measure, or obtain the expectation value of an observable. Preparing your workload to measure your circuit in one of these two ways is done through the [Qiskit primitives](../run/primitives-get-started) (explained in detail in [Step 3](#step-3-execute-using-the-quantum-primitives) of this page).\n",
+    "While creating quantum circuits, you must also consider what type of data you want to get back after execution, and there are are two ways to do so within Qiskit. You can either obtain a probability distribution for a set of qubits you choose to measure, or obtain the expectation value of an observable. Preparing your workload to measure your circuit in one of these two ways is done through the [Qiskit primitives](../run/primitives-get-started) (explained in detail in [Step 3](#step-3-execute-using-the-quantum-primitives) of this page).\n",
     "\n",
-    "For this example, we will be measuring some expectation values using the `qiskit.quantum_info` submodule which will be specified using operators (these are mathematical objects used to represent an action or process which changes a quantum state). The following code cell creates six two-qubit Pauli operators: `IZ`, `IX`, `ZI`, `XI`, `ZZ`, and `XX`."
+    "This example measures expectation values by using the `qiskit.quantum_info` submodule, which is specified by using operators (mathematical objects used to represent an action or process that changes a quantum state). The following code cell creates six two-qubit Pauli operators: `IZ`, `IX`, `ZI`, `XI`, `ZZ`, and `XX`."
    ]
   },
   {
@@ -162,7 +162,7 @@
     "\n",
     "observables = [IZ, IX, ZI, XI, ZZ, XX]\n",
     "observables_labels = [\"IZ\", \"IX\", \"ZI\", \"XI\", \"ZZ\", \"XX\"]\n",
-    "observables = [SparsePauliOp(label) for label in observables_labels]"
+    "observables = [SparsePauliOp(label) for label in observables_labels]GHZ"
    ]
   },
   {
@@ -188,7 +188,7 @@
     "\n",
     "When executing circuits on a device, it is an important step to optimize the set of instructions which the circuit contains and work to minimize the overall depth (roughly the number of instructions) of the circuit. This ensures that you obtain the best results possible by reducing the effects of error and noise. Additionally, the circuit's instructions must conform to a backend device's [Instruction Set Architecture (ISA)](../transpile/#instruction-set-architecture) and takes both the device's basis gates as well as its qubit connectivity into account.\n",
     "\n",
-    "The following code instantiates a real device to submit a job to and transform the circuit to match that backend's ISA."
+    "The following code instantiates a real device to submit a job to and transform the circuit and observables to match that backend's ISA."
    ]
   },
   {
@@ -210,6 +210,8 @@
     }
    ],
    "source": [
+    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
+    "\n",
     "# If you did not previously save your credentials, use the following line instead:\n",
     "# service = QiskitRuntimeService(channel=\"ibm_quantum\", token=\"<MY_IBM_QUANTUM_TOKEN>\")\n",
     "service = QiskitRuntimeService()\n",
@@ -252,7 +254,7 @@
     }
    ],
    "source": [
-    "# Construct the Estimator instance we want to use.\n",
+    "# Construct the Estimator instance.\n",
     "from qiskit_ibm_runtime import EstimatorV2 as Estimator\n",
     "\n",
     "estimator = Estimator(backend=backend)\n",
@@ -266,7 +268,7 @@
     "# One pub, with one circuit to run against five different observables.\n",
     "job = estimator.run([(isa_circuit, mapped_observables)])\n",
     "\n",
-    "# Use the job id in order to retrieve your job data at a later time\n",
+    "# Use the job ID to retrieve your job data later\n",
     "print(f\">>> Job ID: {job.job_id()}\")"
    ]
   },
@@ -277,7 +279,7 @@
    "source": [
     "Once a job is submitted, you can wait until either the job is completed within your current python instance, or use the `job_id` in order to retrieve the data at a later time.  (See the [section on retrieving jobs](../run/monitor-job#retrieve-job-results-at-a-later-time) for more info)\n",
     "\n",
-    "Once a job is completed, we can examine its output through the job's `result()` attribute shown below."
+    "Once a job is completed, examine its output through the job's `result()` attribute shown below."
    ]
   },
   {
@@ -287,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is the result of the entire submission.  We submitted one Pub,\n",
+    "# This is the result of the entire submission.  You submitted one Pub,\n",
     "# so this contains one inner result (and some metadata of its own).\n",
     "job_result = job.result()\n",
     "\n",
@@ -327,7 +329,7 @@
     "result = job.result()\n",
     "\n",
     "\n",
-    "# This is the result of the entire submission.  We submitted one Pub,\n",
+    "# This is the result of the entire submission.  You submitted one Pub,\n",
     "# so this contains one inner result (and some metadata of its own).\n",
     "job_result = job.result()\n",
     "\n",
@@ -390,7 +392,7 @@
    "id": "e6a9ba84",
    "metadata": {},
    "source": [
-    "Here we see that for qubits 0 and 1, the independent expectation values of both X and Z are 0, while the correlations (`XX` and `ZZ`) are 1. This is a hallmark of quantum entanglement."
+    "Notice that for qubits 0 and 1, the independent expectation values of both X and Z are 0, while the correlations (`XX` and `ZZ`) are 1. This is a hallmark of quantum entanglement."
    ]
   },
   {
@@ -400,11 +402,11 @@
    "source": [
     "## Scale to large numbers of qubits\n",
     "\n",
-    "In quantum computing, utility-scale work is crucial for making progress in the field. Such work requires computations to be done on a much larger scale; working with circuits that might use over 100 qubits and over 1000 gates. This example demonstrates how you can accomplish utility-scale work on IBM Quantum systems by working with a 100-qubit Bell state.  It uses the Qiskit Patterns workflow and ends by measuring the expectation value $\\langle Z_0 Z_i \\rangle $ for each qubit.\n",
+    "In quantum computing, utility-scale work is crucial for making progress in the field. Such work requires computations to be done on a much larger scale; working with circuits that might use over 100 qubits and over 1000 gates. This example demonstrates how you can accomplish utility-scale work on IBM Quantum systems by working with a 100-qubit GHZ state.  It uses the Qiskit Patterns workflow and ends by measuring the expectation value $\\langle Z_0 Z_i \\rangle $ for each qubit.\n",
     "\n",
     "### Step 1. Map the problem\n",
     "\n",
-    "Write a function that returns a `QuantumCircuit` that prepares an $n$-qubit Bell state then use that function to prepare a 100-qubit Bell state and collect the observables to be measured."
+    "Write a function that returns a `QuantumCircuit` that prepares an $n$-qubit GHZ state (essentially an extended Bell state), then use that function to prepare a 100-qubit GHZ state and collect the observables to be measured."
    ]
   },
   {
@@ -416,14 +418,14 @@
    "source": [
     "from qiskit import QuantumCircuit\n",
     "\n",
-    "def get_qc_for_n_qubit_Bell_state(n: int) -> QuantumCircuit:\n",
-    "    \"\"\"This function will create a qiskit.QuantumCircuit (qc) for an n-qubit Bell state.\n",
+    "def get_qc_for_n_qubit_GHZ_state(n: int) -> QuantumCircuit:\n",
+    "    \"\"\"This function will create a qiskit.QuantumCircuit (qc) for an n-qubit GHZ state.\n",
     "\n",
     "    Args:\n",
-    "        n (int): Number of qubits in the n-qubit Bell state\n",
+    "        n (int): Number of qubits in the n-qubit GHZ state\n",
     "\n",
     "    Returns:\n",
-    "        QuantumCircuit: Quantum circuit that generate the n-qubit Bell state, assuming all qubits start in the 0 state\n",
+    "        QuantumCircuit: Quantum circuit that generate the n-qubit GHZ state, assuming all qubits start in the 0 state\n",
     "    \"\"\"\n",
     "    if isinstance(n, int) and n >= 2:\n",
     "        qc = QuantumCircuit(n)\n",
@@ -440,7 +442,7 @@
     "# Create a new circuit with two qubits (first argument) and two classical\n",
     "# bits (second argument)\n",
     "n = 100\n",
-    "qc = get_qc_for_n_qubit_Bell_state(n)"
+    "qc = get_qc_for_n_qubit_GHZ_state(n)"
    ]
   },
   {
@@ -484,7 +486,7 @@
    "source": [
     "### Step 2. Optimize the problem for execution on quantum hardware\n",
     "\n",
-    "Transpile this circuit and map the observables to the hardware's layout (ISA). "
+    "Transform the circuit and observables to match the backend's ISA. "
    ]
   },
   {
@@ -494,15 +496,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
+    "\n",
+    "service = QiskitRuntimeService()\n",
     "\n",
     "backend_name = \"ibm_brisbane\"\n",
     "backend = QiskitRuntimeService().get_backend(backend_name)\n",
     "pm = generate_preset_pass_manager(optimization_level=1, backend=backend)\n",
     "\n",
-    "qc_transpiled = pm.run(qc)\n",
-    "operators_transpiled_list = [op.apply_layout(qc_transpiled.layout) for op in operators]"
+    "isa_circuit = pm.run(qc)\n",
+    "isa_operators_list = [op.apply_layout(isa_circuit.layout) for op in operators]"
    ]
   },
   {
@@ -530,12 +534,9 @@
     }
    ],
    "source": [
-    "from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorOptions\n",
+    "from qiskit_ibm_runtime import EstimatorOptions\n",
     "from qiskit_ibm_runtime import EstimatorV2 as Estimator\n",
     "\n",
-    "service = QiskitRuntimeService()\n",
-    "\n",
-    "# backend = service.get_backend('ibm_sherbrooke')\n",
     "backend = service.get_backend('ibm_brisbane')\n",
     "\n",
     "options = EstimatorOptions()\n",
@@ -548,7 +549,7 @@
     "estimator = Estimator(backend, options=options)\n",
     "\n",
     "# Submit the circuit to Estimator\n",
-    "job = estimator.run([(qc_transpiled, operators_transpiled_list)])\n",
+    "job = estimator.run([(isa_circuit, isa_operators_list)])\n",
     "job_id = job.job_id()\n",
     "print(job_id)"
    ]
@@ -560,7 +561,7 @@
    "source": [
     "### Step 4. Post-process results\n",
     "\n",
-    "After the job completes, plot the results and notice that $\\langle Z_0 Z_i \\rangle$ decreases with increasing $i$, even though in an ideal simulation we should see that all $\\langle Z_0 Z_i \\rangle$ should be 1. "
+    "After the job completes, plot the results and notice that $\\langle Z_0 Z_i \\rangle$ decreases with increasing $i$, even though in an ideal simulation all $\\langle Z_0 Z_i \\rangle$ should be 1."
    ]
   },
   {
